--- a/style.css
+++ b/style.css
@@ -148,8 +148,7 @@ h1, h2, h3 {
   width: 100%;
   height: 50px;
   cursor: pointer;
-  box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
-  background: #3071a9;
+  background: #ddd;
   border: none;
 }
 
